--- a/templates/index.html
+++ b/templates/index.html
@@ -46,7 +46,7 @@
                     </p></h3></p>
 
 
-  <footer style="margin-left: 950px">
+  <article>
   	<p>Follow me on:<br>
   	GIT HUB &#128073 <a style="color: chartreuse" href="https://github.com/niketkumardheeryan">Click Here</a> <br>
   	Instagram &#128073 <a style="color: chartreuse" href="https://www.instagram.com/way_2_sky/">Click Here</a> <br>
@@ -64,7 +64,7 @@
 
 
 
-  </footer>
+  </article>
 
 
 </body>
